@@ -1,8 +1,8 @@
-// Copyright (C) 2008 Anders Logg.
+// Copyright (C) 2009 Anders Logg.
 // Licensed under the GNU LGPL Version 2.1.
 //
-// First added:  2008-11-03
-// Last changed: 2008-11-03
+// First added:  2009-03-11
+// Last changed: 2009-03-11
 
 #include <dolfin/mesh/Cell.h>
 #include "Data.h"
@@ -51,5 +51,11 @@ Point Data::normal() const
 bool Data::on_facet() const
 {
   return _facet >= 0;
+}
+//-----------------------------------------------------------------------------
+dolfin::uint Data::geometric_dimension() const
+{
+  dolfin_assert(_cell);
+  return _cell->mesh().geometry().dim();
 }
 //-----------------------------------------------------------------------------
